[package]
name = "graph-server-websocket"
version = "0.21.1"
edition = "2018"

[dependencies]
futures = "0.1.23"
graph = { path = "../../graph" }
graphql-parser = "0.3"
http = "0.2.3"
lazy_static = "1.4.0"
serde = "1.0.123"
serde_derive = "1.0.123"
tokio-tungstenite = "0.10"
uuid = { version = "0.7.2", features = ["v4"] }
anyhow = "1.0"
